--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       --radius: 18px;
       --max: 1120px;
 
-      /* CAMBIOS: overlay + hero */
+      /* CAMBIOS: hero + overlay */
       --overlay-img: url("https://iili.io/fb6dwQ4.md.jpg");
       --hero-img: url("https://iili.io/fb6EjCG.md.png");
 
@@ -72,7 +72,7 @@
       background-repeat:no-repeat;
       background-size:cover;
       background-position:center;
-      opacity:.18; /* CAMBIO: se ve poquito pero se ve */
+      opacity:.18; /* se ve poquito pero se ve */
       filter:saturate(1.08) contrast(1.06);
       pointer-events:none;
       z-index:-2;
@@ -160,7 +160,7 @@
       border: 1px solid var(--panel-border);
       background: linear-gradient(180deg, var(--panel-bg), rgba(10,10,22,.44));
       box-shadow:
-        0 18px 60px rgba(0,0,0,.48),
+        var(--shadow),
         inset 0 1px 0 var(--panel-inner);
       backdrop-filter: blur(10px) saturate(1.15);
       -webkit-backdrop-filter: blur(10px) saturate(1.15);
@@ -439,7 +439,7 @@
       nav{display:none}
       .brand{min-width: unset}
       .heroArt img{border-radius: 16px; width: min(640px, 100%);}
-      body::before{opacity:.20; background-position: center top;} /* CAMBIO mobile */
+      body::before{opacity:.20; background-position: center top;}
       .logoImg{width:40px; height:40px; border-radius: 14px;}
     }
   </style>
