--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       --radius: 18px;
       --max: 1120px;
 
-      /* CAMBIOS: hero + overlay */
+      /* HERO + OVERLAY */
       --overlay-img: url("https://iili.io/fb6dwQ4.md.jpg");
       --hero-img: url("https://iili.io/fb6EjCG.md.png");
 
@@ -64,6 +64,7 @@
       position:relative;
     }
 
+    /* CAMBIO: overlay más clarito + en mobile se ve completa (contain) */
     body::before{
       content:"";
       position:fixed;
@@ -72,8 +73,8 @@
       background-repeat:no-repeat;
       background-size:cover;
       background-position:center;
-      opacity:.18; /* se ve poquito pero se ve */
-      filter:saturate(1.08) contrast(1.06);
+      opacity:.30;                 /* + visible (más clarito) */
+      filter:saturate(1.10) contrast(1.06);
       pointer-events:none;
       z-index:-2;
       transform: translateZ(0);
@@ -156,12 +157,12 @@
     .quote,
     details,
     .contactCard{
-      border-radius: var(--radius);
-      border: 1px solid var(--panel-border);
-      background: linear-gradient(180deg, var(--panel-bg), rgba(10,10,22,.44));
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.18);
+      background: linear-gradient(180deg, rgba(10,10,22,.56), rgba(10,10,22,.44));
       box-shadow:
-        var(--shadow),
-        inset 0 1px 0 var(--panel-inner);
+        0 18px 60px rgba(0,0,0,.48),
+        inset 0 1px 0 rgba(255,255,255,.10);
       backdrop-filter: blur(10px) saturate(1.15);
       -webkit-backdrop-filter: blur(10px) saturate(1.15);
     }
@@ -232,7 +233,7 @@
     }
     .subtitle{
       margin: 10px 0 0;
-      color: var(--muted);
+      color: rgba(244,243,255,.78);
       font-size: 15px;
       line-height: 1.55;
       max-width: 62ch;
@@ -439,7 +440,13 @@
       nav{display:none}
       .brand{min-width: unset}
       .heroArt img{border-radius: 16px; width: min(640px, 100%);}
-      body::before{opacity:.20; background-position: center top;}
+      /* CAMBIO: en móvil, overlay entero dentro de pantalla */
+      body::before{
+        opacity:.32;              /* un toque más visible en móvil también */
+        background-size: contain; /* se ve completa */
+        background-position: center;
+        background-repeat: no-repeat;
+      }
       .logoImg{width:40px; height:40px; border-radius: 14px;}
     }
   </style>
@@ -487,44 +494,13 @@
               </p>
 
               <div class="ctaRow">
-                <a class="btn whats" id="ctaWhats" href="#" rel="noopener">
-                  <span class="icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M20.4 3.6A11.7 11.7 0 0 0 12 0C5.4 0 .1 5.3.1 11.9c0 2.1.6 4.2 1.6 6L0 24l6.3-1.6a12 12 0 0 0 5.7 1.4h.1c6.6 0 11.9-5.3 11.9-11.9 0-3.2-1.2-6.1-3.6-8.3ZM12 21.7h-.1c-1.9 0-3.7-.5-5.3-1.4l-.4-.2-3.7 1 1-3.6-.2-.4a9.8 9.8 0 0 1-1.5-5.2C1.8 6.5 6.1 2.2 11.9 2.2c2.6 0 5 .9 6.9 2.9a9.6 9.6 0 0 1 2.9 6.8c0 5.8-4.3 9.8-9.6 9.8Zm5.6-7.3c-.3-.1-1.7-.8-2-.9-.3-.1-.5-.1-.7.1-.2.3-.8.9-1 .9-.2.1-.4.1-.7 0-.3-.1-1.3-.5-2.4-1.5-.9-.8-1.5-1.8-1.7-2.1-.2-.3 0-.5.1-.6l.5-.6c.2-.2.2-.4.3-.6.1-.2 0-.4 0-.6-.1-.1-.7-1.7-1-2.3-.2-.6-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 2.9s1.2 3.4 1.4 3.7c.2.3 2.3 3.5 5.6 4.9.8.3 1.4.5 1.9.6.8.2 1.5.2 2.1.1.6-.1 1.7-.7 1.9-1.3.2-.6.2-1.2.1-1.3-.1-.2-.3-.2-.6-.3Z" fill="currentColor"/>
-                    </svg>
-                  </span>
-                  Reservar por WhatsApp
-                </a>
-
-                <a class="btn ig" id="ctaIg" href="#" rel="noopener">
-                  <span class="icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M7.6 2h8.8A5.6 5.6 0 0 1 22 7.6v8.8A5.6 5.6 0 0 1 16.4 22H7.6A5.6 5.6 0 0 1 2 16.4V7.6A5.6 5.6 0 0 1 7.6 2Zm8.8 2H7.6A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm5.7-2.6a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z" fill="currentColor"/>
-                    </svg>
-                  </span>
-                  Consultar por Instagram
-                </a>
+                <a class="btn whats" id="ctaWhats" href="#" rel="noopener">Reservar por WhatsApp</a>
+                <a class="btn ig" id="ctaIg" href="#" rel="noopener">Consultar por Instagram</a>
               </div>
 
               <div class="metaRow">
-                <div class="pill">
-                  <span class="icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M12 22s7-4.4 7-12a7 7 0 1 0-14 0c0 7.6 7 12 7 12Z" stroke="currentColor" stroke-width="1.8"/>
-                      <path d="M12 13.2a3.2 3.2 0 1 0 0-6.4 3.2 3.2 0 0 0 0 6.4Z" stroke="currentColor" stroke-width="1.8"/>
-                    </svg>
-                  </span>
-                  Modalidad: online / por turno
-                </div>
-                <div class="pill">
-                  <span class="icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M7 3v3M17 3v3M4 8h16M6 12h4M6 16h6" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
-                      <path d="M6 5h12a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2Z" stroke="currentColor" stroke-width="1.8"/>
-                    </svg>
-                  </span>
-                  Turnos: coordinamos por mensaje
-                </div>
+                <div class="pill">Modalidad: online / por turno</div>
+                <div class="pill">Turnos: coordinamos por mensaje</div>
               </div>
             </div>
 
@@ -540,27 +516,9 @@
               <h3>¿Qué podés traer a la sesión?</h3>
               <p>Una situación puntual, una decisión, un bloqueo, un vínculo, o simplemente la necesidad de claridad.</p>
               <ul class="list">
-                <li class="li">
-                  <div class="check" aria-hidden="true"></div>
-                  <div>
-                    <strong>Preguntas claras</strong>
-                    <span>Armamos juntas el foco para que la sesión sea útil y concreta.</span>
-                  </div>
-                </li>
-                <li class="li">
-                  <div class="check" aria-hidden="true"></div>
-                  <div>
-                    <strong>Lectura ordenada</strong>
-                    <span>Una devolución simple para que te quede todo claro y accionable.</span>
-                  </div>
-                </li>
-                <li class="li">
-                  <div class="check" aria-hidden="true"></div>
-                  <div>
-                    <strong>Enfoque respetuoso</strong>
-                    <span>Con cuidado y claridad, sin promesas vacías.</span>
-                  </div>
-                </li>
+                <li class="li"><div class="check" aria-hidden="true"></div><div><strong>Preguntas claras</strong><span>Armamos juntas el foco para que la sesión sea útil y concreta.</span></div></li>
+                <li class="li"><div class="check" aria-hidden="true"></div><div><strong>Lectura ordenada</strong><span>Una devolución simple para que te quede todo claro y accionable.</span></div></li>
+                <li class="li"><div class="check" aria-hidden="true"></div><div><strong>Enfoque respetuoso</strong><span>Con cuidado y claridad, sin promesas vacías.</span></div></li>
               </ul>
             </div>
 
@@ -581,55 +539,27 @@
 
     <section class="section" id="servicios">
       <h2>Servicios</h2>
-      <p class="lead">
-        Elegí el formato que más se ajuste a tu momento. Si no sabés cuál, me escribís y lo definimos en 2 mensajes.
-      </p>
+      <p class="lead">Elegí el formato que más se ajuste a tu momento. Si no sabés cuál, me escribís y lo definimos en 2 mensajes.</p>
 
       <div class="cols">
-        <div class="feature">
-          <h3>Mediumnidad</h3>
-          <p>Sesión enfocada en conectar información y mensajes para traer claridad sobre tu proceso y tu situación.</p>
-        </div>
-        <div class="feature">
-          <h3>Tarot</h3>
-          <p>Lectura orientada a situación actual + opciones de acción. Ideal para decisiones y caminos posibles.</p>
-        </div>
-        <div class="feature">
-          <h3>Péndulo</h3>
-          <p>Consulta puntual para orientar decisiones y destrabar dudas concretas con preguntas claras.</p>
-        </div>
+        <div class="feature"><h3>Mediumnidad</h3><p>Sesión enfocada en conectar información y mensajes para traer claridad sobre tu proceso y tu situación.</p></div>
+        <div class="feature"><h3>Tarot</h3><p>Lectura orientada a situación actual + opciones de acción. Ideal para decisiones y caminos posibles.</p></div>
+        <div class="feature"><h3>Péndulo</h3><p>Consulta puntual para orientar decisiones y destrabar dudas concretas con preguntas claras.</p></div>
       </div>
 
       <div class="cols" style="margin-top:12px;">
-        <div class="feature" style="grid-column: 1 / -1;">
-          <h3>Registros Akáshicos</h3>
-          <p>Sesión enfocada en comprensión profunda de procesos personales y dirección para dar próximos pasos.</p>
-        </div>
+        <div class="feature" style="grid-column: 1 / -1;"><h3>Registros Akáshicos</h3><p>Sesión enfocada en comprensión profunda de procesos personales y dirección para dar próximos pasos.</p></div>
       </div>
     </section>
 
     <section class="section" id="como">
       <h2>Cómo funciona</h2>
-      <p class="lead">
-        Simple y directo: coordinamos el turno, definimos el foco y hacemos la sesión.
-      </p>
+      <p class="lead">Simple y directo: coordinamos el turno, definimos el foco y hacemos la sesión.</p>
 
       <div class="steps">
-        <div class="step">
-          <div class="num">01 • Consulta</div>
-          <h3>Me escribís</h3>
-          <p>Por WhatsApp o Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p>
-        </div>
-        <div class="step">
-          <div class="num">02 • Turno</div>
-          <h3>Coordinamos horario</h3>
-          <p>Te paso disponibilidad y elegimos el momento. (Modalidad online / por turno).</p>
-        </div>
-        <div class="step">
-          <div class="num">03 • Sesión</div>
-          <h3>Trabajamos el foco</h3>
-          <p>La sesión se orienta a claridad y próximos pasos. Si querés, te dejo un resumen.</p>
-        </div>
+        <div class="step"><div class="num">01 • Consulta</div><h3>Me escribís</h3><p>Por WhatsApp o Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p></div>
+        <div class="step"><div class="num">02 • Turno</div><h3>Coordinamos horario</h3><p>Te paso disponibilidad y elegimos el momento. (Modalidad online / por turno).</p></div>
+        <div class="step"><div class="num">03 • Sesión</div><h3>Trabajamos el foco</h3><p>La sesión se orienta a claridad y próximos pasos. Si querés, te dejo un resumen.</p></div>
       </div>
     </section>
 
@@ -638,18 +568,9 @@
       <p class="lead">Reemplazá estos textos por capturas o testimonios reales (si tenés).</p>
 
       <div class="testis">
-        <div class="quote">
-          <p>“Me ayudó a ordenar la cabeza y volver a lo importante. Me quedé con un plan simple para seguir.”</p>
-          <div class="who">— Consultante</div>
-        </div>
-        <div class="quote">
-          <p>“Lo que más me gustó fue la claridad y el respeto. Sentí un espacio cuidado, sin vueltas.”</p>
-          <div class="who">— Consultante</div>
-        </div>
-        <div class="quote">
-          <p>“Me sirvió para tomar una decisión que venía pateando. Me quedé mucho más tranquila.”</p>
-          <div class="who">— Consultante</div>
-        </div>
+        <div class="quote"><p>“Me ayudó a ordenar la cabeza y volver a lo importante. Me quedé con un plan simple para seguir.”</p><div class="who">— Consultante</div></div>
+        <div class="quote"><p>“Lo que más me gustó fue la claridad y el respeto. Sentí un espacio cuidado, sin vueltas.”</p><div class="who">— Consultante</div></div>
+        <div class="quote"><p>“Me sirvió para tomar una decisión que venía pateando. Me quedé mucho más tranquila.”</p><div class="who">— Consultante</div></div>
       </div>
     </section>
 
@@ -658,30 +579,16 @@
       <p class="lead">Dejá todo claro acá para filtrar consultas repetidas y llegar directo al turno.</p>
 
       <div class="faq">
-        <details>
-          <summary>¿Cómo reservo? <span>+</span></summary>
-          <p>Me escribís por WhatsApp o Instagram, te paso disponibilidad y coordinamos el turno.</p>
-        </details>
-        <details>
-          <summary>¿Es presencial u online? <span>+</span></summary>
-          <p>Podemos coordinar online. Si trabajás presencial, reemplazá este texto por tu ubicación y horarios.</p>
-        </details>
-        <details>
-          <summary>¿Cuánto dura la sesión? <span>+</span></summary>
-          <p>Depende del servicio. Podés indicar duración aproximada o aclarar que se define al coordinar.</p>
-        </details>
-        <details>
-          <summary>¿Qué tengo que preparar? <span>+</span></summary>
-          <p>Solo un lugar tranquilo y una idea de lo que querés trabajar. Si estás confundida, lo ordenamos juntas.</p>
-        </details>
+        <details><summary>¿Cómo reservo? <span>+</span></summary><p>Me escribís por WhatsApp o Instagram, te paso disponibilidad y coordinamos el turno.</p></details>
+        <details><summary>¿Es presencial u online? <span>+</span></summary><p>Podemos coordinar online. Si trabajás presencial, reemplazá este texto por tu ubicación y horarios.</p></details>
+        <details><summary>¿Cuánto dura la sesión? <span>+</span></summary><p>Depende del servicio. Podés indicar duración aproximada o aclarar que se define al coordinar.</p></details>
+        <details><summary>¿Qué tengo que preparar? <span>+</span></summary><p>Solo un lugar tranquilo y una idea de lo que querés trabajar. Si estás confundida, lo ordenamos juntas.</p></details>
       </div>
     </section>
 
     <section class="section" id="contacto">
       <h2>Reservar turno</h2>
-      <p class="lead">
-        Mandame un mensaje con: <b>1)</b> qué querés trabajar, <b>2)</b> si preferís Mediumnidad, Tarot, Péndulo o Registros Akáshicos, <b>3)</b> tu disponibilidad.
-      </p>
+      <p class="lead">Mandame un mensaje con: <b>1)</b> qué querés trabajar, <b>2)</b> si preferís Mediumnidad, Tarot, Péndulo o Registros Akáshicos, <b>3)</b> tu disponibilidad.</p>
 
       <div class="contactGrid">
         <div class="contactCard">
@@ -700,25 +607,19 @@
             <a class="btn ig" id="sendIg" href="#" rel="noopener">Enviar por Instagram</a>
           </div>
 
-          <div class="hint">
-            Tip: este formulario no “envía” mails: arma el mensaje y lo abre en WhatsApp/IG para que la charla siga ahí.
-          </div>
+          <div class="hint">Tip: este formulario no “envía” mails: arma el mensaje y lo abre en WhatsApp/IG para que la charla siga ahí.</div>
         </div>
 
         <div class="contactCard">
           <h3 style="margin:0; font-size:14px;">Links directos</h3>
-          <p style="margin:8px 0 0; color: rgba(244,243,255,.78); font-size:13px; line-height:1.55;">
-            Si preferís, tocá directo:
-          </p>
+          <p style="margin:8px 0 0; color: rgba(244,243,255,.78); font-size:13px; line-height:1.55;">Si preferís, tocá directo:</p>
 
           <div class="ctaRow" style="margin-top:12px">
             <a class="btn whats" id="directWhats" href="#" rel="noopener">WhatsApp</a>
             <a class="btn ig" id="directIg" href="#" rel="noopener">Instagram</a>
           </div>
 
-          <div class="hint" style="margin-top:12px">
-            Recomendación: agregá tu disponibilidad y una frase tipo “solo por turno”.
-          </div>
+          <div class="hint" style="margin-top:12px">Recomendación: agregá tu disponibilidad y una frase tipo “solo por turno”.</div>
         </div>
       </div>
     </section>
@@ -730,16 +631,8 @@
   </main>
 
   <div class="fab" aria-label="Accesos rápidos">
-    <a class="w" id="fabWhats" href="#" rel="noopener" aria-label="WhatsApp">
-      <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-        <path d="M20.4 3.6A11.7 11.7 0 0 0 12 0C5.4 0 .1 5.3.1 11.9c0 2.1.6 4.2 1.6 6L0 24l6.3-1.6a12 12 0 0 0 5.7 1.4h.1c6.6 0 11.9-5.3 11.9-11.9 0-3.2-1.2-6.1-3.6-8.3ZM12 21.7h-.1c-1.9 0-3.7-.5-5.3-1.4l-.4-.2-3.7 1 1-3.6-.2-.4a9.8 9.8 0 0 1-1.5-5.2C1.8 6.5 6.1 2.2 11.9 2.2c2.6 0 5 .9 6.9 2.9a9.6 9.6 0 0 1 2.9 6.8c0 5.8-4.3 9.8-9.6 9.8Zm5.6-7.3c-.3-.1-1.7-.8-2-.9-.3-.1-.5-.1-.7.1-.2.3-.8.9-1 .9-.2.1-.4.1-.7 0-.3-.1-1.3-.5-2.4-1.5-.9-.8-1.5-1.8-1.7-2.1-.2-.3 0-.5.1-.6l.5-.6c.2-.2.2-.4.3-.6.1-.2 0-.4 0-.6-.1-.1-.7-1.7-1-2.3-.2-.6-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 2.9s1.2 3.4 1.4 3.7c.2.3 2.3 3.5 5.6 4.9.8.3 1.4.5 1.9.6.8.2 1.5.2 2.1.1.6-.1 1.7-.7 1.9-1.3.2-.6.2-1.2.1-1.3-.1-.2-.3-.2-.6-.3Z" fill="currentColor"/>
-      </svg>
-    </a>
-    <a class="i" id="fabIg" href="#" rel="noopener" aria-label="Instagram">
-      <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-        <path d="M7.6 2h8.8A5.6 5.6 0 0 1 22 7.6v8.8A5.6 5.6 0 0 1 16.4 22H7.6A5.6 5.6 0 0 1 2 16.4V7.6A5.6 5.6 0 0 1 7.6 2Zm8.8 2H7.6A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm5.7-2.6a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z" fill="currentColor"/>
-      </svg>
-    </a>
+    <a class="w" id="fabWhats" href="#" rel="noopener" aria-label="WhatsApp"></a>
+    <a class="i" id="fabIg" href="#" rel="noopener" aria-label="Instagram"></a>
   </div>
 
   <script>
