--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       --overlay-img: url("https://iili.io/fb6dwQ4.md.jpg");
       --hero-img: url("https://iili.io/fb6EjCG.md.png");
 
-      /* CAMBIO: tarjetas más claritas (más transparencia para ver overlay) */
+      /* tarjetas claritas */
       --panel-bg: rgba(255,255,255,.085);
-      --panel-bg-2: rgba(255,255,255,.06);
       --panel-border: rgba(255,255,255,.22);
       --panel-inner: rgba(255,255,255,.16);
     }
@@ -148,7 +147,6 @@
     }
     aside.panel{align-self:start;}
 
-    /* CAMBIO: cards/paneles más claritos */
     .panel,
     .section,
     .card,
@@ -264,6 +262,18 @@
       border-color: rgba(255,91,214,.26);
     }
 
+    .btnIcon{
+      width:18px; height:18px;
+      flex: 0 0 18px;
+      display:block;
+    }
+    .btnIcon img{
+      width:100%; height:100%;
+      display:block;
+      object-fit:contain;
+      filter: drop-shadow(0 8px 16px rgba(0,0,0,.25));
+    }
+
     .metaRow{
       display:flex; gap:10px; flex-wrap:wrap;
       margin-top: 10px;
@@ -277,7 +287,6 @@
       border-radius: 999px;
       background: rgba(255,255,255,.08);
     }
-    .icon{width: 16px; height: 16px; display:inline-block;}
 
     .heroSide{
       padding: 18px;
@@ -418,7 +427,7 @@
     .fab a:hover{transform: translateY(-2px)}
     .fab .w{background: linear-gradient(135deg, rgba(49,208,170,.26), rgba(255,255,255,.06)); border-color: rgba(49,208,170,.28)}
     .fab .i{background: linear-gradient(135deg, rgba(255,91,214,.26), rgba(255,255,255,.06)); border-color: rgba(255,91,214,.26)}
-    .fab svg{width:22px; height:22px}
+    .fab img{width:22px; height:22px; display:block; object-fit:contain; filter: drop-shadow(0 8px 16px rgba(0,0,0,.25));}
 
     footer{
       margin-top: 22px;
@@ -494,10 +503,16 @@
 
               <div class="ctaRow">
                 <a class="btn whats" id="ctaWhats" href="#" rel="noopener">
+                  <span class="btnIcon" aria-hidden="true">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" />
+                  </span>
                   Reservar por WhatsApp
                 </a>
 
                 <a class="btn ig" id="ctaIg" href="#" rel="noopener">
+                  <span class="btnIcon" aria-hidden="true">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" />
+                  </span>
                   Consultar por Instagram
                 </a>
               </div>
@@ -561,30 +576,16 @@
 
     <section class="section" id="servicios">
       <h2>Servicios</h2>
-      <p class="lead">
-        Elegí el formato que más se ajuste a tu momento. Si no sabés cuál, me escribís y lo definimos en 2 mensajes.
-      </p>
+      <p class="lead">Elegí el formato que más se ajuste a tu momento. Si no sabés cuál, me escribís y lo definimos en 2 mensajes.</p>
 
       <div class="cols">
-        <div class="feature">
-          <h3>Mediumnidad</h3>
-          <p>Sesión enfocada en conectar información y mensajes para traer claridad sobre tu proceso y tu situación.</p>
-        </div>
-        <div class="feature">
-          <h3>Tarot</h3>
-          <p>Lectura orientada a situación actual + opciones de acción. Ideal para decisiones y caminos posibles.</p>
-        </div>
-        <div class="feature">
-          <h3>Péndulo</h3>
-          <p>Consulta puntual para orientar decisiones y destrabar dudas concretas con preguntas claras.</p>
-        </div>
+        <div class="feature"><h3>Mediumnidad</h3><p>Sesión enfocada en conectar información y mensajes para traer claridad sobre tu proceso y tu situación.</p></div>
+        <div class="feature"><h3>Tarot</h3><p>Lectura orientada a situación actual + opciones de acción. Ideal para decisiones y caminos posibles.</p></div>
+        <div class="feature"><h3>Péndulo</h3><p>Consulta puntual para orientar decisiones y destrabar dudas concretas con preguntas claras.</p></div>
       </div>
 
       <div class="cols" style="margin-top:12px;">
-        <div class="feature" style="grid-column: 1 / -1;">
-          <h3>Registros Akáshicos</h3>
-          <p>Sesión enfocada en comprensión profunda de procesos personales y dirección para dar próximos pasos.</p>
-        </div>
+        <div class="feature" style="grid-column: 1 / -1;"><h3>Registros Akáshicos</h3><p>Sesión enfocada en comprensión profunda de procesos personales y dirección para dar próximos pasos.</p></div>
       </div>
     </section>
 
@@ -593,21 +594,9 @@
       <p class="lead">Simple y directo: coordinamos el turno, definimos el foco y hacemos la sesión.</p>
 
       <div class="steps">
-        <div class="step">
-          <div class="num">01 • Consulta</div>
-          <h3>Me escribís</h3>
-          <p>Por WhatsApp o Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p>
-        </div>
-        <div class="step">
-          <div class="num">02 • Turno</div>
-          <h3>Coordinamos horario</h3>
-          <p>Te paso disponibilidad y elegimos el momento. (Modalidad online / por turno).</p>
-        </div>
-        <div class="step">
-          <div class="num">03 • Sesión</div>
-          <h3>Trabajamos el foco</h3>
-          <p>La sesión se orienta a claridad y próximos pasos. Si querés, te dejo un resumen.</p>
-        </div>
+        <div class="step"><div class="num">01 • Consulta</div><h3>Me escribís</h3><p>Por WhatsApp o Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p></div>
+        <div class="step"><div class="num">02 • Turno</div><h3>Coordinamos horario</h3><p>Te paso disponibilidad y elegimos el momento. (Modalidad online / por turno).</p></div>
+        <div class="step"><div class="num">03 • Sesión</div><h3>Trabajamos el foco</h3><p>La sesión se orienta a claridad y próximos pasos. Si querés, te dejo un resumen.</p></div>
       </div>
     </section>
 
@@ -616,18 +605,9 @@
       <p class="lead">Reemplazá estos textos por capturas o testimonios reales (si tenés).</p>
 
       <div class="testis">
-        <div class="quote">
-          <p>“Me ayudó a ordenar la cabeza y volver a lo importante. Me quedé con un plan simple para seguir.”</p>
-          <div class="who">— Consultante</div>
-        </div>
-        <div class="quote">
-          <p>“Lo que más me gustó fue la claridad y el respeto. Sentí un espacio cuidado, sin vueltas.”</p>
-          <div class="who">— Consultante</div>
-        </div>
-        <div class="quote">
-          <p>“Me sirvió para tomar una decisión que venía pateando. Me quedé mucho más tranquila.”</p>
-          <div class="who">— Consultante</div>
-        </div>
+        <div class="quote"><p>“Me ayudó a ordenar la cabeza y volver a lo importante. Me quedé con un plan simple para seguir.”</p><div class="who">— Consultante</div></div>
+        <div class="quote"><p>“Lo que más me gustó fue la claridad y el respeto. Sentí un espacio cuidado, sin vueltas.”</p><div class="who">— Consultante</div></div>
+        <div class="quote"><p>“Me sirvió para tomar una decisión que venía pateando. Me quedé mucho más tranquila.”</p><div class="who">— Consultante</div></div>
       </div>
     </section>
 
@@ -636,30 +616,16 @@
       <p class="lead">Dejá todo claro acá para filtrar consultas repetidas y llegar directo al turno.</p>
 
       <div class="faq">
-        <details>
-          <summary>¿Cómo reservo? <span>+</span></summary>
-          <p>Me escribís por WhatsApp o Instagram, te paso disponibilidad y coordinamos el turno.</p>
-        </details>
-        <details>
-          <summary>¿Es presencial u online? <span>+</span></summary>
-          <p>Podemos coordinar online. Si trabajás presencial, reemplazá este texto por tu ubicación y horarios.</p>
-        </details>
-        <details>
-          <summary>¿Cuánto dura la sesión? <span>+</span></summary>
-          <p>Depende del servicio. Podés indicar duración aproximada o aclarar que se define al coordinar.</p>
-        </details>
-        <details>
-          <summary>¿Qué tengo que preparar? <span>+</span></summary>
-          <p>Solo un lugar tranquilo y una idea de lo que querés trabajar. Si estás confundida, lo ordenamos juntas.</p>
-        </details>
+        <details><summary>¿Cómo reservo? <span>+</span></summary><p>Me escribís por WhatsApp o Instagram, te paso disponibilidad y coordinamos el turno.</p></details>
+        <details><summary>¿Es presencial u online? <span>+</span></summary><p>Podemos coordinar online. Si trabajás presencial, reemplazá este texto por tu ubicación y horarios.</p></details>
+        <details><summary>¿Cuánto dura la sesión? <span>+</span></summary><p>Depende del servicio. Podés indicar duración aproximada o aclarar que se define al coordinar.</p></details>
+        <details><summary>¿Qué tengo que preparar? <span>+</span></summary><p>Solo un lugar tranquilo y una idea de lo que querés trabajar. Si estás confundida, lo ordenamos juntas.</p></details>
       </div>
     </section>
 
     <section class="section" id="contacto">
       <h2>Reservar turno</h2>
-      <p class="lead">
-        Mandame un mensaje con: <b>1)</b> qué querés trabajar, <b>2)</b> si preferís Mediumnidad, Tarot, Péndulo o Registros Akáshicos, <b>3)</b> tu disponibilidad.
-      </p>
+      <p class="lead">Mandame un mensaje con: <b>1)</b> qué querés trabajar, <b>2)</b> si preferís Mediumnidad, Tarot, Péndulo o Registros Akáshicos, <b>3)</b> tu disponibilidad.</p>
 
       <div class="contactGrid">
         <div class="contactCard">
@@ -674,29 +640,35 @@
           </div>
 
           <div class="sendRow">
-            <a class="btn whats" id="sendWhats" href="#" rel="noopener">Enviar por WhatsApp</a>
-            <a class="btn ig" id="sendIg" href="#" rel="noopener">Enviar por Instagram</a>
+            <a class="btn whats" id="sendWhats" href="#" rel="noopener">
+              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" /></span>
+              Enviar por WhatsApp
+            </a>
+            <a class="btn ig" id="sendIg" href="#" rel="noopener">
+              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" /></span>
+              Enviar por Instagram
+            </a>
           </div>
 
-          <div class="hint">
-            Tip: este formulario no “envía” mails: arma el mensaje y lo abre en WhatsApp/IG para que la charla siga ahí.
-          </div>
+          <div class="hint">Tip: este formulario no “envía” mails: arma el mensaje y lo abre en WhatsApp/IG para que la charla siga ahí.</div>
         </div>
 
         <div class="contactCard">
           <h3 style="margin:0; font-size:14px;">Links directos</h3>
-          <p style="margin:8px 0 0; color: rgba(244,243,255,.82); font-size:13px; line-height:1.55;">
-            Si preferís, tocá directo:
-          </p>
+          <p style="margin:8px 0 0; color: rgba(244,243,255,.82); font-size:13px; line-height:1.55;">Si preferís, tocá directo:</p>
 
           <div class="ctaRow" style="margin-top:12px">
-            <a class="btn whats" id="directWhats" href="#" rel="noopener">WhatsApp</a>
-            <a class="btn ig" id="directIg" href="#" rel="noopener">Instagram</a>
+            <a class="btn whats" id="directWhats" href="#" rel="noopener">
+              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" /></span>
+              WhatsApp
+            </a>
+            <a class="btn ig" id="directIg" href="#" rel="noopener">
+              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" /></span>
+              Instagram
+            </a>
           </div>
 
-          <div class="hint" style="margin-top:12px">
-            Recomendación: agregá tu disponibilidad y una frase tipo “solo por turno”.
-          </div>
+          <div class="hint" style="margin-top:12px">Recomendación: agregá tu disponibilidad y una frase tipo “solo por turno”.</div>
         </div>
       </div>
     </section>
@@ -708,8 +680,12 @@
   </main>
 
   <div class="fab" aria-label="Accesos rápidos">
-    <a class="w" id="fabWhats" href="#" rel="noopener" aria-label="WhatsApp"></a>
-    <a class="i" id="fabIg" href="#" rel="noopener" aria-label="Instagram"></a>
+    <a class="w" id="fabWhats" href="#" rel="noopener" aria-label="WhatsApp">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+    </a>
+    <a class="i" id="fabIg" href="#" rel="noopener" aria-label="Instagram">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
+    </a>
   </div>
 
   <script>
